# tsubamegaeshi-rs

./: .gitignore  AGENTS.md  Cargo.toml  Country-only-cn-private.mmdb  Cross.toml  Makefile  README.md  config.toml  openwrt-aarch64.sh  openwrt-ramips.sh  openwrt-x86_64.sh  testme
.github/workflows/: release.yml
contrib/etc/capabilities/: tsubamegaeshi-rs.json
contrib/etc/config/: tsubamegaeshi-rs
contrib/etc/init.d/: tsubamegaeshi-rs
contrib/etc/tsubamegaeshi-rs/: adblockdomainlite.txt  config.toml  ipv4.txt  ipv6.txt
contrib/etc/uci-defaults/: luci-app-tsubamegaeshi-rs
contrib/usr/libexec/: update_tsubamegaeshi_files.sh
src/: adblock.rs  cache.rs  config.rs  dns_utils.rs  domain_utils.rs  gfwlist.rs  main.rs  mark_sites.rs  pollution.rs  server.rs  task_guard.rs
