[package]
name = "tsubamegaeshi-rs"
version = "0.1.0"
edition = "2024"
description = "燕返 — Lightweight dual-rail DNS splitter with IP-based geo decisions, caching, and Xray integration"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-proto = "0.24"
maxminddb = { version = "0.28.1", features = ["simdutf8"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
lru = "0.12"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
anyhow = "1"
socket2 = "0.6.3"
clap = { version = "4", features = ["derive"] }
base64 = "0.21"
bloomfilter = "3"
tokio-util = "0.7.18"

[profile.release]
opt-level = "z"      # 比 "s" 更激进的体积优化
lto = true           # 全链接期优化
codegen-units = 1    # 单编译单元，让 LTO 效果最大化
strip = true         # 自动 strip
panic = "abort"      # 去掉 panic unwind 逻辑
